# api-gofiber-gen/server/model.gen.go
@@ -4,8 +4,9 @@
 package server
 
 const (
-	ApiKeyAuthScopes = "ApiKeyAuth.Scopes"
-	BasicAuthScopes  = "BasicAuth.Scopes"
+	ApiKeyAuthScopes   = "ApiKeyAuth.Scopes"
+	BasicAuthScopes    = "BasicAuth.Scopes"
+	FirebaseAuthScopes = "FirebaseAuth.Scopes"
 )
 
 // Application defines model for Application.
